src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>QVM Account Business Sales Process</fullName>
        <description>Using for night market opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Casual_Trading_Days__c</fullName>
        <inlineHelpText>Days that this casual trader are contracted to trade</inlineHelpText>
        <label>Casual Trading Days</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contracted_Leave__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days leave the Trader has for the year</description>
        <label>Contracted Leave Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Inv_Date__c</fullName>
        <label>Last Inv Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Friday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Friday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Friday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Monday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Monday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Monday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Saturday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Saturday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Saturday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Sunday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Sunday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Sunday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Thursday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Thursday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Thursday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Tuesday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Tuesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Tuesday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Remaining_Wednesday__c</fullName>
        <formula>Contracted_Leave__c -  Leave_Taken_Wednesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Remaining Wednesday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Friday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Friday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Monday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Monday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Saturday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Saturday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Sunday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Sunday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_This_Year__c</fullName>
        <formula>Leave_Taken_Sunday__c +  Leave_Taken_Monday__c  +  Leave_Taken_Tuesday__c +  Leave_Taken_Wednesday__c +  Leave_Taken_Thursday__c  + Leave_Taken_Friday__c + Leave_Taken_Saturday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Taken This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Thursday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Thursday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Tuesday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Tuesday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_Taken_Wednesday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leave Taken Wednesday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Majik_AccountNo__c</fullName>
        <externalId>true</externalId>
        <label>Majik AccountNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappedRecordTypeId__c</fullName>
        <label>MappedRecordTypeId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise_Service__c</fullName>
        <label>Merchandise / Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perm_Stall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Perm Stall</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Stall__c.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Perm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stall__c</referenceTo>
        <relationshipLabel>Opportunities (Perm Stall)</relationshipLabel>
        <relationshipName>Opportunities_Perm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permitted_Use__c</fullName>
        <label>Permitted Use</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Producers&apos; Market                                  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QVM Internal                                    </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Meat.                                                   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Season_Fee__c</fullName>
        <label>Season Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_No__c</fullName>
        <label>Site No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stall_Category__c</fullName>
        <label>Stall Category</label>
        <picklist>
            <picklistValues>
                <fullName>Artisan Wares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flowers &amp; Garden Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homewares &amp; Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets &amp; Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Souvenirs &amp; Specialty Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology &amp; Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys &amp; Gifts</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stall_Fee__c</fullName>
        <label>Stall Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stall_Or_Product_Concept__c</fullName>
        <label>Stall Or Product Concept</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New stall selector, this should be hidden and used for ui of adding a new stall to the opp</description>
        <label>Stall</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Stall__c.RecordType.DeveloperName</field>
                <operation>notContain</operation>
                <value>Perm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stall__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <label>Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplift_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The amount multiplied against the a SL traders rates</description>
        <inlineHelpText>The amount multiplied against the a SL traders rates</inlineHelpText>
        <label>Uplift Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Businesses</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>Events such as Night Market etc....</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>LH</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>Lease Hold Record Type for QVM Account Businesses</description>
        <label>LH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>Other Record types</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Events</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>3rd Party Events</description>
        <label>Other Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>PE</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>Pre Existing Record Type for Account Business.</description>
        <label>PE</label>
    </recordTypes>
    <recordTypes>
        <fullName>SL</fullName>
        <active>true</active>
        <businessProcess>QVM Account Business Sales Process</businessProcess>
        <description>Stall Hold Licenses record Type for QVM Account Businesses</description>
        <label>SL</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Monday_Leave</fullName>
        <active>true</active>
        <errorConditionFormula>Leave_Remaining_Monday__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Leave_Taken_Monday__c</errorDisplayField>
        <errorMessage>There is not enough Monday leave remaining for the year</errorMessage>
    </validationRules>
</CustomObject>